# GenesisOS

./:  LICENSE.Dynlic.md  README.en.md  README.md
network/: DHCP.c  DHCP.h  Makefile  init.c  init.h  net_db.c  net_db.h
rust/: Cargo.toml  Makefile
rust/usr/: Cargo.toml
rust/usr/src/: lib.rs
suroot/: Makefile  logger.c  logger.h  space  space.c  space.h  suroot.h
sys_api/: GError.c  GError.h  code.h
test/: 1.c  Makefile
usr/: main.c  main.h  physics.c  physics.h  usr_db.c  usr_db.h  usr_sys_api.c  usr_sys_api.h
